Fix sidebar z-index

--- a/src/css/components/playlists.css
+++ b/src/css/components/playlists.css
@@ -4,7 +4,7 @@
 	left: 0;
 	width: 280px;
 	height: 100vh;
-	z-index: 2;
+	z-index: 3;
 	overflow-y: auto;
 	background-color: var(--colour-dark-1);
 
